# nano-asi

./: .gitignore  Dockerfile  README.md  colab_setup.py  concat.bat  migrate_docs.sh  nano-graphrag-files-0.txt  pyproject.toml  reasoning_modules.json  reasoning_modules.txt  requirements.txt  start.sh
docs/: README.md  core_concepts.md  getting_started.md  index.md  philosophy.md  quickstart.md
docs/api_reference/: asi.md  config.md
docs/development/: building_docs.md  contributing.md  testing.md
docs/tutorials/: advanced_configuration.md  basic_usage.md  custom_components.md
examples/: README.md  __init__.py  asi_pipeline.py  climate_change_solution.py  code_generation.py  scientific_research_assistant.py  web_research_agent.py
nano-asi/: __init__.py
nano-asi/core/: __init__.py  asi.py  config.py  config_manager.py  interfaces.py
nano-asi/modules/: judgment.py  mcts.py
nano-asi/pipelines/: open_webui_pipeline.py
nano_asi/: __init__.py
nano_asi/architecture/: __init__.py  hierarchical_reasoning.py  hymba_adapter.py  memory_consolidation.py  parallel_decoder.py  reflection_adapter.py  state_space_model.py
nano_asi/components/: base_component.py
nano_asi/core/: __init__.py  architecture.py  asi.py  config.py  config_manager.py  dependency_injection.py  plugin_manager.py
nano_asi/modules/: __init__.py  consciousness.py  graph_rag.py  judgement.py  judgment.py  lora.py  mcts.py  synthetic.py  tournament.py  universe.py
nano_asi/modules/consciousness/: __init__.py  state.py  tracker.py
nano_asi/modules/diffusion/: model.py
nano_asi/modules/evaluation/: __init__.py  benchmarks.py  docker_executor.py
nano_asi/modules/judgement/: __init__.py  base.py  criteria.py  probabilistic.py  strategies.py
nano_asi/modules/lora/: __init__.py  config.py  generator.py  manager.py
nano_asi/modules/mcts/: __init__.py  advanced.py  base.py  nodes.py  states.py
nano_asi/modules/tournament/: __init__.py  base.py  participants.py  rules.py
nano_asi/testing/: mocks.py
nano_asi/utils/: telemetry.py
tests/: __init__.py  advanced_testing_utils.py  conftest.py  test_consciousness_tracker.py  test_diffusion_workflow.py  test_judgement_module.py  test_lora_diffusion.py  test_lora_diffusion_advanced.py  test_lora_generator.py  test_mcts_module.py  test_tournament_module.py
wiki/: Home.md  Philosophy.md  Quickstart.md  README.md
wiki/Advanced/: MetaCognitiveArchitecture.md  ParallelUniverseExploration.md  TemporalInvestmentStrategy.md
wiki/Components/: ConsciousnessTracker.md  GraphRAGModule.md  Overview.md
wiki/Core_Architecture/: Overview.md
wiki/Development/: Contributing.md  PerformanceOptimization.md  Testing.md
wiki/Getting_Started/: Installation.md  Quickstart.md
wiki/Research/: ConsciousnessModeling.md  EthicalAIDesign.md  QuantumInspiredComputing.md
wiki/Tutorials/: AdvancedUsageTips.md  Advanced_Configuration.md  Basic_Usage.md
