[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nano-asi"
version = "0.1.0"
description = "Advanced Recursive Self-Improving AI Framework with MCTS, LoRA Diffusion, and Consciousness Flow"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "ai", "machine-learning", "recursive-self-improvement", "mcts",
    "lora", "diffusion-models", "consciousness-flow", "hierarchical-judgment"
]
authors = [
    { name = "NanoASI Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Core ML dependencies
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "unsloth>=0.3.0",
    "diffusers>=0.24.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "safetensors>=0.3.0",
    
    # Training and optimization
    "trl>=0.7.0",
    "datasets>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Web interface and API
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "gradio>=3.40.0",
    "streamlit>=1.24.0",
    
    # Utilities and visualization
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "anytree>=2.9.0",
    "graphviz>=0.20.0",
    "plotly>=5.15.0",
    "ipywidgets>=8.0.0",
    
    # Async and networking
    "nest-asyncio>=1.5.8",
    "aiohttp>=3.9.1",
    "httpx>=0.24.0",
    
    # Type hints and utilities
    "typing-extensions>=4.8.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    
    # Data processing and augmentation
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "datamusepython>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "nbsphinx>=0.9.0",
    "jupyter>=1.0.0",
]
cuda = [
    "torch>=2.0.0+cu118",
    "triton>=2.0.0",
]

[project.scripts]
nano-asi = "nano_asi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nano_asi"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[project.urls]
Homepage = "https://github.com/nanoasi/nano-asi"
Documentation = "https://nanoasi.readthedocs.io"
Repository = "https://github.com/nanoasi/nano-asi.git"
Changelog = "https://github.com/nanoasi/nano-asi/blob/main/CHANGELOG.md"
